--- a/src/app/entry/entryLogin/entryLogin.html
+++ b/src/app/entry/entryLogin/entryLogin.html
@@ -11,7 +11,7 @@ SHOW WHICH USER SUBMITTIED WHAT-->
       <md-card>
 
         <md-card-header>
-          Please log in
+          <h4>Please log in</h4>
         </md-card-header>
 
         <md-card-content>
@@ -75,13 +75,12 @@ SHOW WHICH USER SUBMITTIED WHAT-->
             <md-card-actions>
               <button md-raised-button color="primary" type="submit" 
               [disabled]="loginForm.invalid">
-              Next
+              Login
               </button>
               <button md-button routerLink="/">
               Return to home
               </button>
           </md-card-actions>
-
           </form>
 
         </md-card-content> <!--end card-block-->
